--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,17 +25,21 @@ jobs:
       SONAR_TOKEN : '6701540e6f9e9f039ba8038f8f46bd2b2ad6bd58'
       SONAR_USUARIO: 'test_ejecutor'
       SONAR_PASS: 'test_ejecutor'
-      URL_VERACODE1: 'https://analysiscenter.veracode.com'
+      URL_VERACODE_ANALYSIS: 'https://analysiscenter.veracode.com'
+      URL_VERACODE_ANALYSIS_UI: 'https://ui.analysiscenter.veracode.com'
+      URL_VERACODE_ANALYSIS_LOGIN: 'https://login.analysiscenter.veracode.com'
+      URL_VERACODE_ANALYSIS_WEB: 'https://web.analysiscenter.veracode.com'
+      URL_VERACODE_ANALYTICS2: 'https://analytics2.veracode.com'
       
   steps:     
     - uses: actions/checkout@v2
       with:
         lfs: true
         
-    - name: who-am-i action
+    - name: Verificando ANALYSIS
       uses: jtalk/url-health-check-action@v2
       with:
-        url: ${{ env.URL_VERACODE1 }}
+        url: ${{ env.URL_VERACODE_ANALYSIS }}
         follow-redirect: false
         max-attempts: 3
         retry-delay: 5s
