--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,3 +43,36 @@ jobs:
         follow-redirect: false
         max-attempts: 3
         retry-delay: 5s
+        
+    - name: Verificando ANALYSIS_URI
+      uses: jtalk/url-health-check-action@v2
+      with:
+        url: ${{ env.URL_VERACODE_ANALYSIS_UI }}
+        follow-redirect: false
+        max-attempts: 3
+        retry-delay: 5s
+        
+    - name: Verificando ANALYSIS_LOGIN
+      uses: jtalk/url-health-check-action@v2
+      with:
+        url: ${{ env.URL_VERACODE_ANALYSIS_LOGIN }}
+        follow-redirect: false
+        max-attempts: 3
+        retry-delay: 5s
+        
+    - name: Verificando ANALYSIS_WEB
+      uses: jtalk/url-health-check-action@v2
+      with:
+        url: ${{ env.URL_VERACODE_ANALYSIS_WEB }}
+        follow-redirect: false
+        max-attempts: 3
+        retry-delay: 5s
+        
+    - name: Verificando ANALYTICS
+      uses: jtalk/url-health-check-action@v2
+      with:
+        url: ${{ env.URL_VERACODE_ANALYTICS2 }}
+        follow-redirect: false
+        max-attempts: 3
+        retry-delay: 5s
+        
