--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CIname:learn-github-actions
+name: CIname:learn-github-actions prueba veracode 
 on: [push]
 jobs:
  build:
