--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,72 +1,15 @@
-# This is a basic workflow to help you get started with Actions
+name: Tests
 
-name: CIname:learn-github-actions prueba veracode 
 on: [push]
-jobs:
- build:
-  runs-on: ubuntu-latest   # alternate runner OS is: ubuntu-latest
-  env:
-      RUNNER_DEBUG: 1
-      URL_DYNAMICS: 'https://pruebasminsait.crm4.dynamics.com'
-      USER_DYNAMICS: 'rlgalvan@tecxrm.com'
-      PASS_DYNAMICS: 'Indra2507'
-      CLIENT_ID: 'd4416ad8-8ed5-4776-95b7-80985180bcc0'
-      TENANT_ID: 'ec6b17bb-11d0-4195-abd0-521c69a5d1fd'
-      SOLUTION_NAME: 'DevPruebaSan'
-      SOLUTION_EXPORTED_FOLDER: 'out/exported/'
-      SOLUTION_FOLDER: 'out/solutions/'
-      SOLUTION_TARGET_FOLDER: 'solutions/'
-      URL_DYNAMICS_PRODUCTION: 'https://org392b3613.crm4.dynamics.com'
-      USER_DYNAMICS_PRODUCTION: 'TestTestSNT@TESTMINDevOps.onmicrosoft.com'
-      PASS_DYNAMICS_PRODUCTION: 'TrialSNT0609'
-      URL_SONAR_QAT: 'https://qatsonarqubeint.mx.corp/'
-      URL_SONAR_PANDORA: 'http://sonar.pro.pandora.mx.corp/'
-      URL_SONAR_WAS: 'http://wasatdipvlmx01.mx.corp:9000/'
-      SONAR_TOKEN : '6701540e6f9e9f039ba8038f8f46bd2b2ad6bd58'
-      SONAR_USUARIO: 'test_ejecutor'
-      SONAR_PASS: 'test_ejecutor'
-      URL_VERACODE_ANALYSIS: 'https://analysiscenter.veracode.com'
-      URL_VERACODE_ANALYSIS_UI: 'https://ui.analysiscenter.veracode.com'
-      URL_VERACODE_ANALYSIS_LOGIN: 'https://login.analysiscenter.veracode.com'
-      URL_VERACODE_ANALYSIS_WEB: 'https://web.analysiscenter.veracode.com'
-      URL_VERACODE_ANALYTICS2: 'https://analytics2.veracode.com'
-      
-  steps:     
-    - uses: actions/checkout@v2
-      with:
-        lfs: true
-        
-    - name: Verificando ANALYSIS
-      uses: jtalk/url-health-check-action@v2
-      with:
-        url: ${{ env.URL_VERACODE_ANALYSIS }}
-        follow-redirect: false
-        max-attempts: 3
-        retry-delay: 5s
-        
 
-        
-    - name: Verificando ANALYSIS_LOGIN
-      uses: jtalk/url-health-check-action@v2
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v1
+    - name: Run Jest
+      uses: stefanoeb/jest-action@1.0.3
       with:
-        url: ${{ env.URL_VERACODE_ANALYSIS_LOGIN }}
-        follow-redirect: false
-        max-attempts: 3
-        retry-delay: 5s
-        
-    - name: Verificando ANALYSIS_WEB
-      uses: jtalk/url-health-check-action@v2
-      with:
-        url: ${{ env.URL_VERACODE_ANALYSIS_WEB }}
-        follow-redirect: false
-        max-attempts: 3
-        retry-delay: 5s
-        
-    - name: Verificando ANALYTICS
-      uses: jtalk/url-health-check-action@v2
-      with:
-        url: ${{ env.URL_VERACODE_ANALYTICS2 }}
-        follow-redirect: false
-        max-attempts: 3
-        retry-delay: 5s
-        
+        jestArgs: /sum.test.js
