--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,11 +8,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Run Jest
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3
       with:
-          node-version: '16'
-    - run: yarn install
-    - run: yarn test
+          node-version: '16.14.0'
+          cache: 'npm'
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
         
