--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,11 +10,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Run Jest
-      uses: actions/setup-node@v3
       with:
           node-version: '16.14.0'
           cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - run: npm install
+    - run: npm install -g jest
+    - run: npm run unit-tests
         
