--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
       # Install required deps for action
       - name: Install Dependencies
         run: npm install
+        working-directory: client
 
       # Finally, run our tests
       - name: Run the tests
